# toybot-scenegraph

./: .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPERS.md  README.md  mypy.ini  notebook-folder-is-in-the-prototyping-branch.txt  noxfile.py  pyproject.toml
api-docs/: drawing model.ipynb  index.ipynb  renderer.ipynb  scripting.ipynb
notebooks/: Building Toybot.md  Grammar front-end.ipynb  SceneGraph 1.ipynb  SceneGraph 2.ipynb  SceneGraph 3 - State node as a group.ipynb  ToyBot - SceneGraph Integration 1.ipynb  ToyBot - SceneGraph Integration 2 - Scripting Implementation.ipynb  ToyBot - SceneGraph Integration 3 - Path Nodes.ipynb  ToyBot_SceneGraph_Integration_4_Path_Nodes.ipynb
tests/: test_run.py  test_toybot_script.py
toybot/languages/: __init__.py  helpers.py  toybot.py  toybot_lang.py
toybot/renderer/: __init__.py  console.py
toybot/run/: __init__.py  scripting.py
toybot/scenegraph/: __init__.py  path.py  scenegraph.py
