
[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry]
name = "toybot"
version = "0.1.0"
description = ""
authors = ["Stuart Axon <stuaxo2@yahoo.com>", "Ricardo Lafuente <ricardo@manufacturaindependente.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "18.9b"
pytest = "^4.6"
Sphinx = "^2.1"
commonmark = "^0.9.0"
recommonmark = "^0.5.0"
flake8 = "^3.7"
isort = "^4.3"
pre-commit = "^1.17"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
