
[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.coverage.paths]
source = ["toybot/*", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["toybot/*"]

[tool.coverage.report]
show_missing = true

[tool.poetry]
name = "toybot"
version = "0.1.0"
description = ""
authors = ["Stuart Axon <stuaxo2@yahoo.com>", "Ricardo Lafuente <ricardo@manufacturaindependente.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
jsons = "^1.1.1"
typeguard = "^2.7.1"
pip = "^20.0.2"

[tool.poetry.dev-dependencies]
black = "19.10b0"
pytest = "^4.6"
Sphinx = "^2.1"
commonmark = "^0.9.0"
recommonmark = "^0.5.0"
flake8 = "^3.7"
isort = "^4.3"
pre-commit = "^1.17"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"
mypy = "^0.761"
flake8-annotations = "^1.1.3"
pytest_mock = "^2.0.0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.2"
flake8-import-order = "^0.18.1"
flake8-black = "^0.1.1"
pytype = "^2020.1.24"
flake8-docstrings = "^1.5.0"
flake8-blind-except = "^0.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
